Sun Jan 12 16:41:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseq_load): keep type_map to get rid of memory leak.
	  based on a patch by Eric Wong at [ruby-core:59699].  [Bug #9399]

Sun Jan 12 09:21:35 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/util.h (DECIMAL_SIZE_OF_BITS): a preprocessor
	  constant macro to approximate decimal representation size of n-bits
	  integer.

	* iseq.c (register_label): use DECIMAL_SIZE_OF_BITS for better
	  approximation.

	* ext/bigdecimal/bigdecimal.c (BigMath_s_log): ditto.

	* common.mk (iseq.o), ext/bigdecimal/depend (bigdecimal.o): add
	  dependency to ruby/util.h for DECIMAL_SIZE_OF_BITS.

Fri Jan 10 16:27:20 2014  Yuki Yugui Sonoda  <yugui@google.com>

	* vm_exec.c (cfp): Avoid generating invalid binary for
	  NativeClient.
	  r15 on x86_64 is reserved by NativeClient.  So r15 to cfp used to
	  generate invalid binary under some combinations of compiler
	  optimization flags.

Fri Jan 10 18:01:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_search_super_method): allow bound method from a
	  module, yet another method transplanting.

Fri Jan 10 13:34:04 2014  Aman Gupta <ruby@tmm1.net>

	* insns.def (opt_aref_with): new instruction to optimize Hash#[],
	  removing any allocation overhead when used with a string literal
	  key. Patch by normalperson (Eric Wong). [ruby-core:59640] [Bug #9382]
	* insns.def (opt_aset_with): new instruction to optimize Hash#[]=
	* compile.c (iseq_compile_each): compiler shortcuts for new
	  instructions
	* hash.c (static VALUE rb_hash_compare_by_id_p): fix documentation for
	  Hash#compare_by_identity to reflect frozen string sharing
	* test/ruby/test_hash.rb (class TestHash): test for new behavior

Fri Jan 10 06:23:21 2014  Benoit Daloze  <eregontp@gmail.com>

	* range.c (Range#size): [DOC] improve description and add examples.
	  Patch by @skade. [Fixes GH-501]

Fri Jan 10 00:47:52 2014  Josef Stribny  <strzibny@gmail.com>
